media queries on front page and about page for better user experience (that is to say, the doctor's face no longer covers the entire page!

--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,14 @@
+* {
+  font-family: Helvetica,Arial,sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 300px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+p {
+  font-size: 15px;
 }
 
 /* Topbar CSS */
@@ -39,6 +18,7 @@ body {
   justify-content: center;
   width: 50%;
 }
+
 
 .logo {
 }
@@ -51,7 +31,7 @@ body {
 }
 
 .buttonHolder {
-  width: 50%;
+  width: 75%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -77,7 +57,6 @@ body {
   height: 100%;
   display: flex;
   align-items: center;
-  padding: 5px;
 }
 .navbarButton:hover {
   background-color: rgb(199, 199, 199);
@@ -92,9 +71,14 @@ body {
 /* FrontPage CSS */
 
 .frontPage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #222;
-  height: 500px;
+
 }
+
+
 
 .imagePlaceholder {
   height: 20%;
@@ -102,43 +86,47 @@ body {
   color: white;
 }
 .frontPageButtonsDiv {
-  height: 80%;
+  height: 350px;
   display: grid;
   grid-template-areas: 
   "Button1 Button2"
   "Button3 Button4"
 }
 .frontPageButton {
-  border: 1px solid white;
-  background-color: navy;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-weight: bolder;
 }
 .frontPageButton:hover {
-  border: 1px solid white;
   background-color: rgb(0, 0, 163);
   transition-duration: 0.45s;
   display: flex;
   align-items: center;
   justify-content: center;
+  text-decoration: underline;
+
 }
 .button1 {
-  grid-area: Button1
+  grid-area: Button1;
+  background-color: #003da5;
 }
 .button2 {
-  grid-area: Button2
+  grid-area: Button2;
+  background-color: #3364b7;
 }
 .button3 {
-  grid-area: Button3
+  grid-area: Button3;
+  background-color: #3364b7;
 }
 .button4 {
-  grid-area: Button4
+  grid-area: Button4;
+  background-color: #003da5;
 }
 
 .whyChooseLVESection {
   background-color: whitesmoke;
-  margin-top: 20px;
+  padding-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -153,6 +141,7 @@ body {
   flex-direction: column;
   width: 100%;
   align-items: center;
+  padding-bottom: 20px;
 }
 
 .frontPageButtonIcons {
@@ -166,25 +155,34 @@ body {
 
 .whyChooseLVETitle {
   text-align: center;
-  margin-top: 45px;
+  margin-top: 25px;
 }
 .whyChooseLVEUnderline {
   margin-top: 10px;
   width: 30%;
-  border-bottom: 3px solid navy;
+  border-bottom: 3px solid #3967c1;
 }
 
 .whyChooseLVEThumbnail {
-  height: 350px;
+  height: 300px;
   width: 80%;
-  border: 1px solid black;
-  margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   justify-content: center;
+  border-bottom: 1px solid #3967c1;
 }
+
+.paddedTitle {
+  padding-top: 5px;
+}
+
+.paddedText {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 /* end FrontPage CSS */
 
 /* FrontCarousel CSS */
@@ -199,8 +197,101 @@ body {
 /* About Us Page, or All Side Pages, depending */
 
 .informativePage {
-  
+
+}
+.doctorSection {
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.doctorPicture {
+  width: 100%;
+}
+
+.doctorSectionText {
+  width: 80%;
+  padding-top: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
+  text-align: center;
+}
+
+/* end About Us Page */
+
+
+/* Footer Page CSS */
+
+.footerMain {
+  height: 250px;
+  background-color: #3967c1;
+  display: flex;
+  justify-content: center;
+}
+.footerNavbar {
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footerButton {
+  height: 95%;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  color: white !important;
 }
 
 
-/* end About Us Page */
+/* End Footer CSS */
+
+
+@media (min-width: 700px){
+
+  /* frontPage CSS */
+  .frontPageButtonCarouselDiv {
+    display: flex;
+    width: 75%;
+    height: 450px;
+    padding-top: 10px;
+    
+  }
+  
+  .frontPage {
+    background-color: whitesmoke;
+  }
+
+  .carouselContainer {
+    width: 50%;
+    height: 100%;
+  }
+
+  .frontPageButtonsDiv {
+    width: 50%;
+    height: 100%;
+  }
+
+  .whyChooseLVESection {}
+
+  .whyChooseLVEThumbnailDiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .whyChooseLVEThumbnail {
+    width: 20%;
+  }
+
+
+  /* end FrontPage CSS */
+
+  /* About Us CSS */
+  .doctorPicture {
+    height: 300px;
+    width: 250px;
+  }
+  /* End About Us CSS */
+}
